@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS = subdir-objects
 
 bin_PROGRAMS = src/imp
-src_imp_SOURCES = imp.cc main_window.cc main_window.h add_metadata.cc add_metadata.h
+src_imp_SOURCES = src/imp.cc src/main_window.cc src/main_window.h src/add_metadata.cc src/add_metadata.h
 src_imp_LDADD = $(GTKMM_LIBS) $(EXIV2_LIBS) $(SQLITE_LIBS)
 
 dist_pkgdata_DATA = data/imp_mainwindow_ui.ui
